# sketchir

./: Cargo.toml  README.md
src/: blocking.rs  dense_simhash.rs  lib.rs  lsh.rs  minhash.rs  simhash.rs
